tests/expected_output/default/uninitialized_posix_spawnp-fsanitize=valgrind.txt

Runtime error: uninitialized variable accessed.

Execution stopped in main() in tests/run_time_errors/uninitialized_posix_spawnp.c at line 7:

int main(void) {
	pid_t p;
	char *a[] = {"/bin/true", NULL};
	posix_spawn_file_actions_t file_actions;
-->	posix_spawnp(&p, a[0], &file_actions, NULL, a, NULL);
}

Values when execution stopped:

a =  <deleted-value>
file_actions = {__allocated = <uninitialized value>, __used = <uninitialized value>, __actions =  <deleted-value>
p =  <deleted-value>
a[0] =  <deleted-value>
